added copyright symbol

--- a/week01/index.html
+++ b/week01/index.html
@@ -228,7 +228,7 @@
     <p>Buyer: "Stay away from my house, you freak!"</p>
     <p>Bullhorn: "But..."</p>
     <p>Buyer: "Can't you see that everyone is buying station wagons?"</p>
-    <h6>Copyright :copyright: 1999 By Neal Stephenson</h6>
+    <h6>Copyright :&#169: 1999 By Neal Stephenson</h6>
 </body>
 </html>
 
