Made names italicized names and centered the text

--- a/week01/index.html
+++ b/week01/index.html
@@ -214,20 +214,20 @@
       Prospective station wagon buyer: "I know what you say is
       true...but...er...I don't know how to maintain a tank!"
     </p>
-    <p>Bullhorn: "You don't know how to maintain a station wagon either!"</p>
+    <p> <m> Bullhorn:</m> "You don't know how to maintain a station wagon either!" </p>
     <p>
-      Buyer: "But this dealership has mechanics on staff. If something goes
+      <m> Buyer:</m> "But this dealership has mechanics on staff. If something goes
       wrong with my station wagon, I can take a day off work, bring it here, and
       pay them to work on it while I sit in the waiting room for hours,
       listening to elevator music."
     </p>
     <p>
-      Bullhorn: "But if you accept one of our free tanks we will send volunteers
+      <m> Bullhorn:</m> "But if you accept one of our free tanks we will send volunteers
       to your house to fix it for free while you sleep!"
     </p>
-    <p>Buyer: "Stay away from my house, you freak!"</p>
-    <p>Bullhorn: "But..."</p>
-    <p>Buyer: "Can't you see that everyone is buying station wagons?"</p>
+    <p> <m> Buyer:</m> "Stay away from my house, you freak!"</p>
+    <p> <m> Bullhorn:</m> "But..."</p>
+    <p> <m> Buyer:</m> "Can't you see that everyone is buying station wagons?"</p>
     <h6>Copyright :&#169: 1999 By Neal Stephenson</h6>
 </body>
 </html>
