--- a/week01/index.html
+++ b/week01/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>In the Beginning was the Command Line</title>
 </head>
 <body>
-    <h1>In the Beginning was the Command Line</h1>
-    <h2>by Neal Stephenson</h2>
+    <h1 id="title">In the Beginning was the Command Line</h1>
+    <h2 id="Author">by Neal Stephenson</h2>
     <p>
       About twenty years ago Jobs and Wozniak, the founders of Apple, came up
       with the very strange idea of selling information processing machines for
